Orders create styling: Fixed width constraints and added overflow behavior.

--- a/app/public/css/orders.css
+++ b/app/public/css/orders.css
@@ -36,14 +36,39 @@
     min-width: 550px;
     gap: 20px;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 #orders-create-side-content {
-    width: fit-content;
+    width: 40%;
+    min-width: 400px;
     height: 100%;
     justify-content: start;
     gap: 20px;
+    overflow-y: auto;
 }
+
+
+/* .scrollable::-webkit-scrollbar {
+    width: 8px;
+}
+
+.scrollable::-webkit-scrollbar-track {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: #eee;
+}
+
+#orders-create-side-content::-webkit-scrollbar-thumb {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin: -6px 0;
+    background-color: #9d8b75;
+}
+
+#orders-create-side-content::-webkit-scrollbar-thumb:hover {
+    background-color: #dfd8cd;
+} */
 
 .create-edit-form {
     width: 100%;
@@ -102,7 +127,6 @@
 }
 
 #order-details-div {
-
 }
 
 #date-details-div {
@@ -114,11 +138,11 @@
 }
 
 #client-details-div {
-    width: 425px;
+    width: 100%;
 }
 
 #contact-details-div {
-    width: 425px;
+    width: 100%;
 }
 
 .action-input-div {
